[gd_scene load_steps=7 format=3 uid="uid://daaux2ol3qd7g"]

[ext_resource type="Texture2D" uid="uid://cbawmvs624uow" path="res://art/fire art/fire_1.png" id="1_0hgh2"]
[ext_resource type="Script" path="res://fire_strike.gd" id="1_qclpl"]
[ext_resource type="Texture2D" uid="uid://b6ofhcfhrko62" path="res://art/fire art/fire_2.png" id="2_3dsr8"]
[ext_resource type="Texture2D" uid="uid://cj1kihefhgac" path="res://art/fire art/fire_3.png" id="3_tglkb"]

[sub_resource type="SpriteFrames" id="SpriteFrames_mpkbm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_0hgh2")
}, {
"duration": 1.0,
"texture": ExtResource("2_3dsr8")
}, {
"duration": 1.0,
"texture": ExtResource("3_tglkb")
}],
"loop": true,
"name": &"strike",
"speed": 5.5
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yxd4u"]
radius = 20.0
height = 72.0

[node name="FireStrike" type="Area2D"]
position = Vector2(70, 0)
collision_layer = 3
collision_mask = 3
script = ExtResource("1_qclpl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_mpkbm")
animation = &"strike"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("CapsuleShape2D_yxd4u")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
